# tui-template

./: Cargo.toml
src/: lib.rs  main.rs
src/app/: actions.rs  mod.rs  state.rs  ui.rs
src/io/: handler.rs
