[package]
name = "tui-template"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27"
eyre = "0.6"
seahorse = "2.1"
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.22", features = ["all-widgets"] }
